# sdl_cmake_template

./: .gitignore  CMakeLists.txt  linbuild.sh  winbuild.bat
game/: CMakeLists.txt
game/src/: main.c
test/: CMakeLists.txt
test/include/: alpha_test.h
test/src/: main.c
